Layout: Fixed a bunch of header/footer spacing
and some padding on the about page

--- a/content/themes/karenmessing/assets/sass/_mixins.scss
+++ b/content/themes/karenmessing/assets/sass/_mixins.scss
@@ -130,7 +130,7 @@
     Misc
     
 ---------------------------------- */
-@mixin horizontal-divider($pseudo, $width: 120px, $margin: 40px) {
+@mixin horizontal-divider($pseudo, $width: 100px, $margin: 50px) {
   
   $direction: bottom;
   
